src/tui/snapshots/gander__tui__render__tests__tui_snapshot_freshness_badges_and_notice.snap
---
source: src/tui/render.rs
expression: "render_tui_text_with_state(&session, &Mode::Normal, &tui_state, 100, 18)"
---
┌files───────────────────────┐┌diff────────────────────────────────────────────────────────────────┐
│• ▾ src 0/1                 ││src/app.rs  +1 -1                                                   │
│  ± mod     app.rs          ││@@ -1 +1 @@  changed                                                │
│~ mod     README.md         ││    1 - old                                                         │
│                            ││    1 + new                                                         │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘
2 files (0/2 viewed, 0 generated/noisy), +2/-2, 0 comments · following @
info: repository changed — @ moved to abcdef · change queue updated
