src/tui/snapshots/gander__tui__render__tests__tui_snapshot_help_overlay.snap
---
source: src/tui/render.rs
assertion_line: 4124
expression: "render_tui_text(&session, &Mode::Help, 110, 32)"
---
┌files─────────────────────────────────────┐┌diff────────────────────────────────────────────────────────────┐
│• ▾ src 0/1                               ││src/app.rs  +1 -1                                               │
│  • mod     app.rs                        ││@@ -1,2 +1,2 @@                                                 │
│     ┌help─────────────────────────────────────────────────────────────────────────────────────────────┐    │
│     │first review loop                                zen keys                                        │    │
│     │           /  open a file or fuzzy jump                   n/p  next/back stop                    │    │
│     │           n  next unviewed file                          tab  toggle focus card / reading view  │    │
│     │       enter  mark viewed and advance                       g  open glance board                 │    │
│     │           c  comment on what needs work                    e  open artifacts                    │    │
│     │           T  zen briefing for a focused pass               d  toggle chapter details / expand   │    │
│     │      ctrl-y  copy handoff when done             brief                                           │    │
│     │general                                                     .  refocus current stop              │    │
│     │         tab  switch focus between files and diff           a  acknowledge glance items          │    │
│     │           w  hide/show file pane                         esc  leave zen / close artifact        │    │
│     │           ?  this help                          comments                                        │    │
│     │      ctrl-a  activity feed (live refresh while             c  comment at cursor                 │    │
│     │open)                                                       r  start/finish range comment        │    │
│     │      ctrl-g  dismiss range/notice                          s  cycle comment state               │    │
│     │           q  quit (writes artifact)                        e  edit comment                      │    │
│     │files                                                       x  delete comment                    │    │
│     │         j/k  move in tree                                  C  comment list                      │    │
│     │       space  fold/unfold directory                         X  review tasks                      │    │
│     │  left/right  collapse/expand directory                     W  walkthrough panel                 │    │
│     │           /  fuzzy file search                             Y  mark for walkthrough              │    │
│     │           h  hide/show noisy files                       m/M  next/previous comment             │    │
│     │           f  cycle viewed filter                targets & jj                                    │    │
│     │         n/N  next/previous unviewed file                   t  return to launch target           │    │
│     │       enter  mark viewed and advance                       p  compare @-..@                     │    │
│     └─────────────────────────────────────────────────────────────────────────────────────────────────┘    │
└──────────────────────────────────────────┘└────────────────────────────────────────────────────────────────┘
1 files (0/1 viewed, 0 generated/noisy), +1/-1, 0 comments · following @
help · any key to close
