src/tui/snapshots/gander__tui__render__tests__tui_snapshot_hidden_file_pane.snap
---
source: src/tui/render.rs
expression: "render_tui_style_runs(&session, &Mode::Normal, 80, 12)"
---
y=01 x=01..17 fg=Some(Yellow) bg=Some(Reset) add=BOLD sub=NONE text="src/app.rs  +1 -1"
y=02 x=01..15 fg=Some(Blue) bg=Some(Reset) add=BOLD sub=NONE text="@@ -1,3 +1,3 @@"
y=03 x=01..01 fg=Some(Yellow) bg=Some(Reset) add=NONE sub=NONE text=" "
y=03 x=02..05 fg=Some(DarkGray) bg=Some(Reset) add=NONE sub=NONE text="   1"
y=03 x=07..19 fg=Some(Gray) bg=Some(DarkGray) add=BOLD sub=NONE text="  fn main() {"
y=04 x=01..01 fg=Some(Yellow) bg=Some(Reset) add=NONE sub=NONE text=" "
y=04 x=02..05 fg=Some(DarkGray) bg=Some(Reset) add=NONE sub=NONE text="   2"
y=04 x=07..12 fg=Some(Red) bg=Some(Rgb(48, 27, 31)) add=NONE sub=NONE text="-     "
y=04 x=13..15 fg=Some(Red) bg=Some(Rgb(107, 43, 43)) add=BOLD sub=NONE text="old"
y=04 x=16..18 fg=Some(Red) bg=Some(Rgb(48, 27, 31)) add=NONE sub=NONE text="();"
y=05 x=01..01 fg=Some(Yellow) bg=Some(Reset) add=NONE sub=NONE text=" "
y=05 x=02..05 fg=Some(DarkGray) bg=Some(Reset) add=NONE sub=NONE text="   2"
y=05 x=07..12 fg=Some(Green) bg=Some(Rgb(18, 38, 30)) add=NONE sub=NONE text="+     "
y=05 x=13..15 fg=Some(Green) bg=Some(Rgb(26, 74, 41)) add=BOLD sub=NONE text="new"
y=05 x=16..18 fg=Some(Green) bg=Some(Rgb(18, 38, 30)) add=NONE sub=NONE text="();"
y=06 x=01..01 fg=Some(Yellow) bg=Some(Reset) add=NONE sub=NONE text=" "
y=06 x=02..05 fg=Some(DarkGray) bg=Some(Reset) add=NONE sub=NONE text="   3"
y=06 x=07..09 fg=Some(Gray) bg=Some(Reset) add=NONE sub=NONE text="  }"
y=10 x=00..79 fg=Some(DarkGray) bg=Some(Reset) add=NONE sub=NONE text="1 files (0/1 viewed, 0 generated/noisy), +1/-1, 0 comments · following @        "
y=11 x=00..79 fg=Some(DarkGray) bg=Some(Reset) add=NONE sub=NONE text="trunk()..@ · focus diff · j/k line · d/u scroll · r range · Y walkthrough · c co"
