src/tui/snapshots/gander__tui__render__tests__tui_snapshot_jj_helpers_choose.snap
---
source: src/tui/render.rs
expression: "render_tui_text(&session, &Mode::JjHelpers(state.clone()), 100, 24)"
---
┌files─────────────────────────────────────┐┌diff──────────────────────────────────────────────────┐
│• ▾ src 0/1                               ││src/app.rs  +1 -1                                     │
│  • mod     app.rs                        ││@@ -1 +1 @@                                           │
│                                          ││    1 - old                                           │
│                                          ││    1 + new                                           │
│                                          ││                                                      │
│           ┌jj helpers────────────────────────────────────────────────────────────────┐           │
│           │jj helpers (nothing runs until you confirm)                               │           │
│           │                                                                          │           │
│           │› squash @ into its parent  (jj squash -r @)                              │           │
│           │  squash src/app.rs into the parent of @  (jj squash -r @ src/app.rs)     │           │
│           │  split src/app.rs out of @  (jj split -r @ src/app.rs)                   │           │
│           │                                                                          │           │
│           │j/k move · enter select · esc close                                       │           │
│           │                                                                          │           │
│           │                                                                          │           │
│           │                                                                          │           │
│           └──────────────────────────────────────────────────────────────────────────┘           │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
└──────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
1 files (0/1 viewed, 0 generated/noisy), +1/-1, 0 comments · following @
jj helpers · j/k move · enter select · esc close
