src/tui/snapshots/gander__tui__render__tests__tui_snapshot_jj_helpers_confirm.snap
---
source: src/tui/render.rs
expression: "render_tui_text(&session, &Mode::JjHelpers(state), 100, 24)"
---
┌files───────────────────────┐┌diff────────────────────────────────────────────────────────────────┐
│• ▾ src 0/1                 ││src/app.rs  +1 -1                                                   │
│  • mod     app.rs          ││@@ -1 +1 @@                                                         │
│                            ││    1 - old                                                         │
│                            ││    1 + new                                                         │
│                            ││                                                                    │
│           ┌jj helpers────────────────────────────────────────────────────────────────┐           │
│           │About to run:                                                             │           │
│           │                                                                          │           │
│           │  jj squash -r @                                                          │           │
│           │                                                                          │           │
│           │This rewrites history in your repo. enter run · esc back                  │           │
│           │                                                                          │           │
│           │                                                                          │           │
│           │                                                                          │           │
│           │                                                                          │           │
│           │                                                                          │           │
│           └──────────────────────────────────────────────────────────────────────────┘           │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘
1 files (0/1 viewed, 0 generated/noisy), +1/-1, 0 comments · following @
confirm jj command · enter run · esc back
