src/tui/snapshots/gander__tui__render__tests__tui_snapshot_menu_dropdown_hovered_item.snap
---
source: src/tui/render.rs
expression: rendered
---
 ? help  ] hunk  . file  c comment  V view  Z focus  alt-g glance  w pane  q quit
┌files──╭──────────────────╮────┐┌diff───────────────────────────────────────────────────────────────────────┐
│• mod  │ next hunk      ] │    ││a.rs  +1 -1                                                                │
│       │ previous hunk  [ │    ││@@ -1 +1 @@                                                                │
│       ╰──────────────────╯    ││    1 - old                                                                │
│                               ││    1 + new                                                                │
│                               ││                                                                           │
│                               ││                                                                           │
│                               ││                                                                           │
│                               ││                                                                           │
│                               ││                                                                           │
│                               ││                                                                           │
│                               ││                                                                           │
│                               ││                                                                           │
│                               ││                                                                           │
│                               ││                                                                           │
│                               ││                                                                           │
└───────────────────────────────┘└───────────────────────────────────────────────────────────────────────────┘
1 files (0/1 viewed, 0 generated/noisy), +1/-1, 0 comments · following @
trunk()..@ · focus files · j/k move · space fold · f filter · / search · n/N unviewed · enter viewed · tab dif

next hunk: "│"=Style::new().fg(Color::Rgb(230, 237, 243)).bg(Color::Reset).underline_color(Color::Reset) | "•"=Style::new().fg(Color::Rgb(63, 185, 80)).bg(Color::Rgb(48, 52, 58)).underline_color(Color::Reset).bold() | "mod"=Style::new().fg(Color::Rgb(76, 176, 168)).bg(Color::Rgb(48, 52, 58)).underline_color(Color::Reset).bold() | "│ next hunk      ] │"=Style::new().fg(Color::Rgb(230, 237, 243)).bg(Color::Reset).underline_color(Color::Reset) | "││"=Style::new().fg(Color::Rgb(230, 237, 243)).bg(Color::Reset).underline_color(Color::Reset) | "a.rs  +1 -1"=Style::new().fg(Color::Rgb(210, 153, 34)).bg(Color::Reset).underline_color(Color::Reset).bold() | "                                                                │"=Style::new().fg(Color::Rgb(230, 237, 243)).bg(Color::Reset).underline_color(Color::Reset)
previous hunk: "│       │"=Style::new().fg(Color::Rgb(230, 237, 243)).bg(Color::Reset).underline_color(Color::Reset) | " previous hunk  [ "=Style::new().fg(Color::Rgb(230, 237, 243)).bg(Color::Rgb(48, 52, 58)).underline_color(Color::Reset).bold() | "│    ││"=Style::new().fg(Color::Rgb(230, 237, 243)).bg(Color::Reset).underline_color(Color::Reset) | "@@ -1 +1 @@"=Style::new().fg(Color::Rgb(88, 166, 255)).bg(Color::Reset).underline_color(Color::Reset).bold() | "                                                                │"=Style::new().fg(Color::Rgb(230, 237, 243)).bg(Color::Reset).underline_color(Color::Reset)
